# asx-index-flow-alpha-lab

./: .env.example  .gitignore  FINDINGS.md  Makefile  README.md  REPORT.md  pyproject.toml
configs/: config.yaml  providers.yaml  strategy_params.yaml  watchlists.yaml
data/manual/: README.md
examples/: asx200_inclusion_study.py  demo_pipeline.py  event_path_study.py  index_inclusion_backtest.py  make_figures.py  thematic_inclusion_study.py
notebooks/: 01_index_registry_audit.ipynb  02_asx_flow_event_discovery.ipynb  03_delayed_reaction_event_study.ipynb  04_strategy_backtests.ipynb  05_ml_candidate_prediction.ipynb
reports/: README.md
reports/tables/: asx200_inclusion_events.csv  asx200_inclusion_ledger.csv  asx_etf_scanner.csv  asx_etf_universe.csv  etf_rebalance_calendar.csv  event_path_caar.csv  flow_scanner.csv  forced_ownership_map.csv  inclusion_ledger.csv  inclusion_runup_by_index.csv  inclusion_runup_by_liquidity.csv  inclusion_runup_by_year.csv  inclusion_strategy_summary.csv  next_trades_asx_watch.csv  thematic_inclusion_study.csv  (+3 more)
scripts/: asx_etf_scanner.py  build_events.py  build_index_registry.py  detect_etf_accumulation.py  diff_holdings.py  discover_etfs.py  etf_rebalance_calendar.py  fetch_etf_holdings_fmp.py  fetch_fmp_data.py  fetch_holdings.py  flow_scanner.py  forced_ownership_map.py  next_trades.py  run_backtest.py  run_event_study.py  run_research_loop.py  universal_ownership_map.py
tests/: conftest.py  test_backtester.py  test_event_builder.py  test_holdings_diff.py  test_no_lookahead.py  test_reaction_detector.py  test_registry.py
(+37 files in other folders)
