[project]
name = "asx-index-flow-alpha-lab"
version = "0.1.0"
description = "Discovery engine for tradable inefficiencies in ASX stocks caused by forced index/ETF buying and selling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Jackson" }]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
